test/libsolidity/syntaxTests/functionTypes/payable_internal_function_type_is_not_fatal.sol
contract C {
    function (uint) internal payable returns (uint) x;

    function g() public {
        x = g;
    }
}
// ----
// TypeError: (17-66): Only external function types can be payable.
